--- a/package.json
+++ b/package.json
@@ -1,5 +1,39 @@
 {
+  "name": "Ubx",
+  "version": "0.1.0",
+  "main": "main.js",
+  "scripts": {
+    "dev-watch": "webpack --config webpack.config.development.js --watch",
+    "dev-server": "webpack-dev-server --config webpack.config.development.js --progress --colors --port 2992 --inline",
+    "dev-start": "NODE_ENV=development electron ."
+  },
   "devDependencies": {
-    "electron-prebuilt": "^0.35.2"
+    "babel-core": "^6.2.1",
+    "babel-loader": "^6.2.0",
+    "babel-plugin-transform-runtime": "^6.1.18",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-runtime": "^6.2.0",
+    "css-loader": "^0.23.0",
+    "electron-prebuilt": "^0.35.2",
+    "expose-loader": "^0.7.1",
+    "extract-text-webpack-plugin": "^0.9.1",
+    "file-loader": "^0.8.5",
+    "less": "^2.5.3",
+    "less-loader": "^2.2.2",
+    "postcss-discard-comments": "^2.0.2",
+    "postcss-loader": "^0.8.0",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
+    "vue-hot-reload-api": "^1.2.2",
+    "vue-html-loader": "^1.0.0",
+    "vue-loader": "^7.1.7",
+    "webpack": "^1.12.9",
+    "webpack-dev-server": "^1.14.0"
+  },
+  "dependencies": {
+    "bootstrap": "^3.3.6",
+    "jquery": "^2.1.4",
+    "vue": "^1.0.10",
+    "vue-router": "^0.7.7"
   }
 }
