--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "bootstrap": "^3.3.6",
     "bootstrap-material-design": "FezVrasta/bootstrap-material-design#0.5.1",
     "jquery": "^2.1.4",
+    "material-design-icons": "google/material-design-icons#8a8e4c2",
+    "roboto-fontface": "^0.4.2",
     "vue": "^1.0.10",
     "vue-router": "^0.7.7"
   }
