change commands dev-start to dev-app, add --hot options to dev-server commands

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "main": "main.js",
   "scripts": {
-    "dev-server": "webpack-dev-server --config webpack.config.development.js --progress --colors --port 2992 --inline",
-    "dev-start": "NODE_ENV=development electron ."
+    "dev-server": "webpack-dev-server --config webpack.config.development.js --progress --colors --port 2992 --hot --inline",
+    "dev-app": "NODE_ENV=development electron ."
   },
   "devDependencies": {
     "babel-core": "^6.2.1",
