rename home.vue to core.vue, add request package and base test

--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "expose-loader": "^0.7.1",
     "extract-text-webpack-plugin": "^0.9.1",
     "file-loader": "^0.8.5",
+    "json-loader": "^0.5.4",
     "less": "^2.5.3",
     "less-loader": "^2.2.2",
     "postcss-discard-comments": "^2.0.2",
     "postcss-loader": "^0.8.0",
+    "string-replace-webpack-plugin": "0.0.2",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
     "vue-hot-reload-api": "^1.2.2",
@@ -34,6 +36,7 @@
     "bootstrap-material-design": "FezVrasta/bootstrap-material-design#0.5.1",
     "jquery": "^2.1.4",
     "material-design-icons": "google/material-design-icons#8a8e4c2",
+    "request": "^2.67.0",
     "roboto-fontface": "^0.4.2",
     "vue": "^1.0.10",
     "vue-router": "^0.7.7"
