--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "bootstrap": "^3.3.6",
     "bootstrap-material-design": "FezVrasta/bootstrap-material-design#0.5.1",
+    "cheerio": "^0.19.0",
     "jquery": "^2.1.4",
     "material-design-icons": "google/material-design-icons#8a8e4c2",
     "request": "^2.67.0",
