--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "main.js",
   "scripts": {
     "dev-server": "webpack-dev-server --config webpack.config.development.js --progress --colors --port 2992 --hot --inline",
-    "dev-app": "NODE_ENV=development electron ."
+    "dev-app": "NODE_ENV=development electron .",
+    "dist-build": "webpack --config webpack.config.production.js -p --progress --profile --colors",
+    "dist-app": "electron ./dist"
   },
   "devDependencies": {
     "babel-core": "^6.2.1",
@@ -13,6 +15,7 @@
     "babel-preset-es2015": "^6.1.18",
     "babel-runtime": "^6.2.0",
     "css-loader": "^0.23.0",
+    "electron-packager": "^5.1.1",
     "electron-prebuilt": "^0.35.2",
     "expose-loader": "^0.7.1",
     "extract-text-webpack-plugin": "^0.9.1",
