--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "dist-app": "electron ./dist"
   },
   "devDependencies": {
-    "babel-core": "^6.2.1",
+    "babel-core": "^6.3.15",
     "babel-loader": "^6.2.0",
-    "babel-plugin-transform-runtime": "^6.1.18",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-runtime": "^6.2.0",
+    "babel-plugin-transform-runtime": "^6.3.13",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
+    "babel-runtime": "^5.8.34",
     "css-loader": "^0.23.0",
     "electron-packager": "^5.1.1",
     "electron-prebuilt": "^0.35.2",
@@ -30,7 +31,7 @@
     "url-loader": "^0.5.7",
     "vue-hot-reload-api": "^1.2.2",
     "vue-html-loader": "^1.0.0",
-    "vue-loader": "^7.1.7",
+    "vue-loader": "^7.2.0",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
   },
